--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hyper Hangman 3D: Cursed</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Creepster&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #020617; /* Slate 950 */
-        color: #e2e8f0;
-        margin: 0;
-        padding: 0;
-        overflow: hidden; /* Prevent scroll for full-screen 3D */
-      }
-      #root {
-        width: 100vw;
-        height: 100vh;
-      }
-      .font-horror {
-        font-family: 'Creepster', cursive;
-      }
-    </style>
 
-<link rel="stylesheet" href="/index.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hyper Hangman 3D: Cursed</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Creepster&display=swap"
+    rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #020617;
+      /* Slate 950 */
+      color: #e2e8f0;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      /* Prevent scroll for full-screen 3D */
+    }
+
+    #root {
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .font-horror {
+      font-family: 'Creepster', cursive;
+    }
+  </style>
+
+
 </head>
-  <body>
-    <div id="root"></div>
+
+<body>
+  <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
